# hello-kafka-python

./: .gitignore  Makefile  README.md  basic_kafka_consumer.py  basic_kafka_producer.py  kafka_basic_consumer.py  kafka_basic_producer.py  kafka_client.py  kafka_commit_consumer.py  kafka_consumer.py  kafka_loop_producer.py  logging_setup.py  main.py  msg_processors.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
kafka-config/: broker.properties  controller.properties
src/hello_kafka_python/: __init__.py  kafka_basic_consumer.py  kafka_basic_producer.py  kafka_commit_consumer.py  kafka_consumer.py  kafka_loop_producer.py  logging_config.json  logging_setup.py  main.py  msg_processors.py
src/hello_kafka_python/core/: logging_setup.py
tests/: test_kafka_client.py  test_main.py  test_persist_to_file_msg_processor.py
