[project]
name = "hello-kafka-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "marcello romani", email = "marcello.romani.enit@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "confluent-kafka>=2.11.1",
]

[project.scripts]
hello-kafka-python = "hello_kafka_python.main:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "deptry>=0.23.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]
